--- a/css/styles.css
+++ b/css/styles.css
@@ -2,12 +2,10 @@
     display:none;
 }
 
-.row {
-    justify-items: center;
-}
-
 .container-fluid {
     height: 100vh;
-    align-items:center;
 }
 
+.center {
+    justify-content: center;
+}
